--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
 
       window.onload = function() {
 
+        PIXEL_SIZE = 4.54e-7;
+
         viewer = OpenSeadragon({
           id: "viewer",
           showNavigator: true,
@@ -35,7 +37,7 @@
 
         viewer.scalebar({
             type: OpenSeadragon.ScalebarType.MICROSCOPY,
-            pixelsPerMeter: 1/1.0454e-5,
+            pixelsPerMeter: 1/PIXEL_SIZE,
             minWidth: "75px",
             location: OpenSeadragon.ScalebarLocation.BOTTOM_RIGHT,
             xOffset: 5,
@@ -50,6 +52,21 @@
 
         // viewer.initializeAnnotations()
 
+
+        viewer.addHandler('canvas-click', function(event) {
+          // The canvas-click event gives us a position in web coordinates.
+          var webPoint = event.position;
+
+          // Convert that to viewport coordinates, the lingua franca of OpenSeadragon coordinates.
+          var viewportPoint = viewer.viewport.pointFromPixel(webPoint);
+
+          // Convert from viewport coordinates to image coordinates.
+          var imagePoint = viewer.viewport.viewportToImageCoordinates(viewportPoint);
+
+          // Show the results.
+          console.log(webPoint.toString(), viewportPoint.toString(), imagePoint.toString());
+
+        });
 
       };
 
