Corrected Grid plugin name

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -84,7 +84,7 @@
         });
 
         // Initialize the Grid plugin
-      let gridPlugin = new GridViewerPlugin(viewer, {
+      let gridPlugin = new OSDGridPlugin(viewer, {
         conversionFactor: 4.54e-7 * 1e3,
         units: "mm",
         useBuiltInUI: true
